--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
-github: manishkumar03
+github: [manishkumar03]
 custom: ["https://www.buymeacoffee.com/manishkumar03"]
